--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,18 @@ body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   justify-content: center;
   align-items: center;
+  --fb-orange-dark: #f7b616;  
+  --fb-text-color-dark: #231604;
+  
+  --fb-text-color-white: var(--amplify-colors-background-primary);
+  --amplify-components-button-primary-background-color: var(--amplify-colors-background-primary);
+  --amplify-components-button-primary-color: var(var(--fb-orange-dark));
+  --amplify-internal-button-color: var(--fb-text-color-dark);
+  --amplify-internal-button-background-color: var(--fb-text-color-dark);
+  --amplify-components-button-primary-hover-color : var(--fb-orange-dark);
+  --amplify-colors-border-focus: var(--amplify-components-button-primary-background-color);
+  --amplify-components-link-color: var(--amplify-colors-font-warning);
+  --amplify-internal-button-background-color: var(--fb-orange-dark)
 }
 
 main {
@@ -31,13 +43,10 @@ label {
   width: 50%;
   float: left;
   text-align: right;
-  /* border: 1px dashed black; */
 }
 input, select {
   height: 100%;
   padding: 8px;
-  
-  /* border: 1px dashed black; */
 }
 svg {
   visibility: hidden;
@@ -57,6 +66,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
   color: white;
+  align-self: centre;
 }
 button:hover {
   border-color: #646cff;
