--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background: linear-gradient(180deg, #f7b616, rgb(255, 255, 255));
+  background: linear-gradient(270deg, #f7b616, #fbe09b);
   
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   justify-content: center;
